Add docs for secondary modules

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -161,3 +161,27 @@ abstract = {We report high-resolution inverse Raman spectroscopy measurements of
   author = {M. Marrocco},
   abstract = {The centrifugal force in a rotating molecule influences the intensity of spectral lines. This effect is quantified by the so-called Herman–Wallis factor, but its calculation is rather involved and the result is uncertain for Q-branch Raman transitions. This Letter discusses the reliability of various predictions by means of an experimental proof based on coherent anti-Stokes Raman scattering from H2 molecules.}
 }
+
+
+@article{Whiting:68,
+  title = {An empirical approximation to the Voigt profile},
+  journal = {J. Quant. Spectrosc. Radiat. Trans.},
+  volume = {8},
+  number = {6},
+  pages = {1379-1384},
+  year = {1968},
+  issn = {0022-4073},
+  doi = {https://doi.org/10.1016/0022-4073(68)90081-2},
+  author = {E.E. Whiting},
+}
+
+@article{Beirle:17,
+  AUTHOR = {Beirle, S. and Lampel, J. and Lerot, C. and Sihler, H. and Wagner, T.},
+  TITLE = {Parameterizing the instrumental spectral response function and its changes by a super-Gaussian and its derivatives},
+  JOURNAL = {Atmos. Meas. Tech.},
+  VOLUME = {10},
+  YEAR = {2017},
+  NUMBER = {2},
+  PAGES = {581--598},
+  DOI = {10.5194/amt-10-581-2017}
+}
